Added variables, changed path, removed redudant assertions.